# AIGM

./: .gitignore  AUTH_IMPLEMENTATION_COMPLETE.md  README.md  docker-compose.yml  test_auth_endpoints.sh
.claude/: settings.local.json
backend/: .env.example  Dockerfile  MESSAGING_SYSTEM_COMPLETE.md  README_AUTH.md  alembic.ini  client_realtime_demo.py  init_db.py  main.py  pyproject.toml  requirements.txt  setup_sqlite.py  test_ably_integration.py  test_auth_implementation.py  test_auth_setup.py  test_friends_integration.py  test_messaging_integration.py  test_messaging_system.py  test_realtime_events.py  test_server_room_integration.py  validate_messaging.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  dev.py  friends.py  messages.py  realtime.py  rooms.py  servers.py  users.py
backend/app/auth/: __init__.py  auth0.py  dependencies.py
backend/app/core/: config.py  mock_auth.py
backend/app/db/: __init__.py  database.py  migrations.py  sqlite_setup.py
backend/app/models/: __init__.py  ai_agent_log.py  friendship.py  message.py  room.py  server.py  user.py
backend/app/schemas/: __init__.py  auth.py
backend/app/services/: email_service.py  friendship_service.py  presence_service.py  realtime_service.py  user_service.py
backend/tests/: test_auth.py  test_friends.py  test_messages.py  test_rooms.py  test_servers.py
docs/: AIGM-Phase1-impGuide.md  CHANGELOG.md  architecture.md  claude.md
frontend/: .env.example  DEPENDENCY_FIX_INSTRUCTIONS.md  ENHANCED_RICH_TEXT_COMPLETE.md  ICON_FIX_APPLIED.md  INFINITE_LOOP_FIX_APPLIED.md  LOADING_SCREEN_FIX_APPLIED.md  (+13 more)
(+61 files in other folders)
